Visual enhancements next: Fix alignments of icons
This reverts commit d1ef0d3aafd2f18433164767ac12906127a02ed7.

Reason for revert: Applying again without the impact on styles in
master.

Bug: T319070

--- a/resources/common/mixins.less
+++ b/resources/common/mixins.less
@@ -8,6 +8,8 @@
 	background: url( ../common/images/arrow-down.svg ) 100% 50% no-repeat;
 	width: unit( 16 / @font-size-tabs / @font-size-browser, em );
 	height: unit( 16 / @font-size-tabs / @font-size-browser, em );
+	// https://phabricator.wikimedia.org/T319070#8284272
+	margin-left: -1px;
 }
 
 .mixin-vector-dropdown-menu-item() {
