--- a/resources/skins.vector.styles/components/MenuTabs.less
+++ b/resources/skins.vector.styles/components/MenuTabs.less
@@ -93,9 +93,9 @@
 		.mw-list-item {
 			.mw-ui-icon {
 				// Align small icons with the bottom of the tabs.
-				// Height of tab is 41px, and small icon is 36px,
-				// With 1px border, 41 - 36 + 1;
-				margin: 4px 0 0 0;
+				// Height of tab is 38px, and small icon is 32px,
+				// With 2px border, 38 - 32 + 2
+				margin: 8px 0 0 0;
 			}
 		}
 	}
