--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -66,12 +66,18 @@
 /**
  * Horizontal links menu - logged in and logged out.
  */
-// TODO: Remove vector-user-menu-more after I371bb11903d8cdd8f0da89266fcf549050c0da8c has been in prod for a week
-.vector-user-menu-more,
 .vector-user-menu-overflow {
+	.vector-feature-visual-enhancement-next-enabled & {
+		margin-right: 8px;
+	}
+
 	.vector-menu-content-list {
 		display: flex;
 		align-items: center;
+
+		.vector-feature-visual-enhancement-next-enabled & {
+			column-gap: 8px;
+		}
 	}
 
 	// Add margin to links that don't have the .mw-ui-button or related icon classes.
